<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:fitsSystemWindows="true"


        >
        <FrameLayout
            android:id="@+id/hometab_context"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/txt_gray"
            android:fitsSystemWindows="true"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/bg_gray" />


    </LinearLayout>

        <View
           style="@style/Linestyle"
            android:layout_alignTop="@+id/hometab_radio"
            />
        <RadioGroup
            android:id="@+id/hometab_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/rb_order"
                style="@style/RadioButtonBottomTab"
                android:checked="true"
                android:drawableTop="@drawable/tab_0_back"
                android:text="@string/order" />

            <RadioButton
                android:id="@+id/rb_bill"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_1_back"
                android:text="@string/bill" />

            <RadioButton
                android:id="@+id/rb_user"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_2_back"
                android:text="@string/user" />



        </RadioGroup>








</LinearLayout>
